[package]
name = "solochain-template-node"
description = "A solochain node template built with Substrate, part of Polkadot Sdk."
license = "MIT-0"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

build = "build.rs"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"] }
serde_json = { workspace = true, default-features = true }
jsonrpsee = { version = "0.22", features = ["server"] }

# substrate client
sc-cli = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }
sp-core = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }
sc-executor = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }
sc-network = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }
sc-service = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }
sc-telemetry = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }
sc-transaction-pool = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }
sc-transaction-pool-api = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }
sc-offchain = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }
sc-consensus-aura = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }
sp-consensus-aura = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }
sc-consensus = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }
sc-consensus-grandpa = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }
sp-consensus-grandpa = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }
sc-client-api = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }
sc-rpc-api = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }
sc-basic-authorship = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }

# substrate primitives
sp-runtime = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }
sp-io = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }
sp-timestamp = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }
sp-inherents = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }
sp-keyring = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }
sp-api = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }
sp-blockchain = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }
sp-block-builder = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }

# frame and pallets
frame-system = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }
pallet-transaction-payment = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2", default-features = false }
pallet-transaction-payment-rpc = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }
substrate-frame-rpc-system = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }

# These dependencies are used for runtime benchmarking
frame-benchmarking-cli = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }

# Local Dependencies
solochain-template-runtime = { path = "../runtime" }

# CLI-specific dependencies
try-runtime-cli = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2", optional = true }

[build-dependencies]
substrate-build-script-utils = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc2" }

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"solochain-template-runtime/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"frame-system/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"solochain-template-runtime/try-runtime",
	"sp-runtime/try-runtime",
	"try-runtime-cli/try-runtime",
]
